--- a/zen.toml
+++ b/zen.toml
@@ -9,6 +9,7 @@ cursor-normal = 'green'
 cursor-error = 'red'
 exec-time = '#222222'
 git = '#555555'
+git-arrow = '#333333'
 python-env = '#333333'
 cursor-secondary = 'magenta'
 
@@ -33,7 +34,7 @@ cursor-secondary = 'magenta'
     style = 'plain'
     background = 'transparent'
     foreground = 'p:git'
-    template = ' {{ .HEAD }}{{ if or (.Working.Changed) (.Staging.Changed) }}ᣟ{{ end }} <cyan>{{ if gt .Behind 0 }}⇣{{ end }}{{ if gt .Ahead 0 }}⇡{{ end }}</>'
+    template = ' {{ .HEAD }}{{ if or (.Working.Changed) (.Staging.Changed) }}ᣟ{{ end }} <p:git-arrow>{{ if gt .Behind 0 }}⇣{{ end }}{{ if gt .Ahead 0 }}⇡{{ end }}</>'
 
     [blocks.segments.properties]
       branch_max_length = 25
